deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
  namespace: headless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      name: browserless
      labels:
        app: browserless
    spec:
      containers:
      - name: browserless
        image: browserless/chrome:1.36.0-chrome-stable
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
            #volumeMounts:
            #        - name: config-volume
            #mountPath: /etc/browserless
            #        - name: browserless
            # mountPath: /browserless
#volumes:
#      - name: config-volume
#        configMap:
#          name: browserless
#      - name: browserless
#        emptyDir: {}
