service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"80":"browserless-backendconfig"}}'
    #annotations:
    #prometheus.io/scrape: 'true'
    #prometheus.io/path: '/metrics'
  labels:
    name: browserless
  name: browserless
  namespace: headless
spec:
  type: NodePort
  selector:
    app: browserless
  ports:
  - name: browserless
    protocol: TCP
    port: 80
    targetPort: 3001
